src/test/deca/context/valid/castIntFloat.deca
// Description:
//    Programme minimaliste utilisant un cast d'un int en float
//
// Resultats:
//
//
// Historique:
//    cree le 11/01/2024

{
    float b = (float) (2);
}